[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.16",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "llmlingua>=0.2.2",
    "mistralai>=2.3.2",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
]
