[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "ddgs>=9.14.2",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "litellm>=1.84.0",
    "llmlingua>=0.2.2",
    "mistralai<2.0.0",
    "pydantic>=2.13",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
]
