[project]
name = "argos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "ddgs>=9.14.2",
    "fastapi>=0.135.3",
    "feedparser>=6.0.12",
    "litellm>=1.84.0",
    "llmlingua>=0.2.2",
    "mistralai<2.0.0",
    "mlflow>=2.15.0",
    "pydantic>=2.13",
    "tenacity>=9.1.4",
    "trafilatura>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "fastmcp>=3.4.2",
    "duckduckgo-search>=8.1.1",
    "pocket-tts>=2.1.0",
]

[project.scripts]
write_blog = "main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "sphinx>=7.0.0",
    "sphinx-markdown-builder>=0.6.6",
]
